Garam Beta version is updated

--- a/MainGaramClient/.settings/org.eclipse.core.resources.prefs
+++ b/MainGaramClient/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/functions/RSSReader.java=UTF-8
 encoding//src/functions/URLDownloader.java=UTF-8
 encoding//src/index/GUI.java=UTF-8
 encoding//src/session/CyberGachonSession.java=UTF-8
